--- a/client/tools/index.html
+++ b/client/tools/index.html
@@ -9,5 +9,10 @@
             <a href="/tools/solar_edge_credential" target="_blank">Solar Edge Credential</a><br>
             <a href="/tools/point_checker" target="_blank">Point Checker</a><br>
         </div>
+        <br><br><br><br>
+        <h3>Supply Team</h3>
+        <div>
+            <a href="/tools/supply/quote" target="_blank">Quote</a><br>
+        </div>
     </body>
 </html>
