--- a/client/tools/supply/quote.html
+++ b/client/tools/supply/quote.html
@@ -35,6 +35,8 @@
                 $.ajax({
                     type: "GET",
                     url: "/tools/supply/get_quote",
+                    // TODO for #5
+                    // url: "/tools/supply/search_quotes",
                     data : dict,
                     success: function(data){
                         $('.loader-overlay').css("display", "none")
@@ -49,34 +51,17 @@
                 let target = document.getElementById("customer");
                 let customer_id = target.value;
 
-                // start of synthetic data, temporary
-
-                let synthetic_data = {"leads":[{"id":1,"name":"Jun-21 start for 23 meters"}, {"id":2,"name":"Jun-23 start for 25 meters"}, {"id":3,"name":"Jun-25 start for 30 meters"}]};
-
-                let idAndNames = synthetic_data['leads']
-
-                for (var i = 0; i < idAndNames.length; i++) {
-                    $('#customer_lead').append($("<option></option>").attr("value", idAndNames[i]['id']).text(idAndNames[i]['name'] + '(' + idAndNames[i]['id'] + ')'));
-                }
-
-                return;
-                // end of synthetic data
-
-
                 if (customer_id) {
                     $('#customer_lead').empty();
                     $.ajax({
                         type: "GET",
                         url: "/tools/supply/customer_lead_id_and_name?customer_id=" + customer_id,
-                        // url: "/tools/supply/customer_lead_id_and_name?customer_id=1",
-                        // url: "/tools/supply/search_quotes",
                         
                         success: function(data){
-                            // $('.loader-overlay').css("display", "none")
-                            idAndNames = data['customers_leads'];
+                            idAndNames = data['leads'];
                             $('#customer').append($("<option value=''>Select</option>"));
                             for (var i = 0; i < idAndNames.length; i++) {
-                                $('#customer').append($("<option></option>").attr("value", idAndNames[i]['id']).text(idAndNames[i]['name'] + '(' + idAndNames[i]['id'] + ')'));
+                                $('#customer_lead').append($("<option></option>").attr("value", idAndNames[i]['id']).text(idAndNames[i]['name'] + '(' + idAndNames[i]['id'] + ')'));
                             }
                         }
                     });
